--- a/node/package.json
+++ b/node/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
     "test": "npx jest",
     "test:dev": "npx jest --watch --verbose --maxWorkers 1",
