--- a/node/package.json
+++ b/node/package.json
@@ -23,6 +23,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@gccunha015/process-events-handler": "github:gccunha015/nodejs-process-events-handler-library#1.0.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
