--- a/node/package.json
+++ b/node/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "nodejs-user-management-service",
+  "name": "@gccunha015/user-registration-service",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "dist/server.js",
   "engines": {
     "node": ">=18"
   },
@@ -14,6 +14,7 @@
     "dev": "npx nodemon src/server.ts",
     "build": "npx tsc -p tsconfig.build.json",
     "start": "node dist/server.js",
+    "build:start": "npm run build && npm start",
     "clean": "npm run clean:dist; npm run clean:coverage",
     "clean:dist": "rm -fr dist",
     "clean:coverage": "rm -fr coverage",
