--- a/node/package.json
+++ b/node/package.json
@@ -24,7 +24,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@gccunha015/process-events-handler": "github:gccunha015/nodejs-process-events-handler-library#1.0.0",
+    "@gccunha015/express-errors-handler": "^1.0.0",
+    "@gccunha015/process-events-handler": "^1.0.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
