--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,27 @@
 name: nodejs_services
 
 services:
-  mongo:
-    build: mongo
-    env_file: mongo/.env
-    volumes:
-      - mongo:/data/db
-    ports:
-      - ${MONGO_HOST_PORT}:${MONGO_CONTAINER_PORT}
-
-  # user_registration:
-  #   build: node
-  #   env_file: node/.env
+  # mongo:
+  #   build: mongo
+  #   env_file: mongo/.env
+  #   volumes:
+  #     - mongo:/data/db
   #   ports:
-  #     - ${NODE_HOST_PORT}:${NODE_CONTAINER_PORT}
+  #     - ${MONGO_HOST_PORT}:${MONGO_CONTAINER_PORT}
+
+  user_registration:
+    build: node
+    env_file: node/.env
+    environment:
+      GPR_READ_TOKEN_FILE: /run/secrets/gpr_read_token
+    ports:
+      - ${NODE_HOST_PORT}:${NODE_CONTAINER_PORT}
+    secrets:
+      - gpr_read_token
 
 volumes:
   mongo:
+
+secrets:
+  gpr_read_token:
+    file: gpr_read_token.secret
