--- a/node/.env.example
+++ b/node/.env.example
@@ -3,6 +3,6 @@ HOST="localhost"
 PORT=3000
 MONGO_USER="username"
 MONGO_PASSWORD="password"
-MONGO_HOST="localhost"
+MONGO_HOST="mongo"
 MONGO_PORT=27017
 MONGO_DATABASE="nodejs_services"
